--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,14 +10,7 @@ networks:
 services:
 
     mongo:
-        image: wevquery/mongo
-        build: 
-          context: .
-          dockerfile: docker/mongo.dockerfile
-          args:
-            MONGO_INITDB_ROOT_USERNAME: '${MONGO_ROOT_USERNAME}'
-            MONGO_INITDB_ROOT_PASSWORD: '${MONGO_ROOT_PASSWORD}'
-            MONGO_INITDB_DATABASE: '${MONGO_DATABASE}'
+        image: mongo:3.6
         container_name: wevquery-mongo
         environment:
             MONGO_INITDB_ROOT_USERNAME: '${MONGO_ROOT_USERNAME}'
@@ -30,14 +23,11 @@ services:
         networks: 
             - wevquery
         restart: always
-        depends_on: 
-            - base
 
     core:
         image: wevquery/core
         build: 
           context: .
-          dockerfile: docker/wevquery.dockerfile
           args:
             MONGO_INITDB_ROOT_USERNAME: '${MONGO_ROOT_USERNAME}'
             MONGO_INITDB_ROOT_PASSWORD: '${MONGO_ROOT_PASSWORD}'
@@ -50,20 +40,4 @@ services:
         restart: always
         depends_on: 
             - mongo
-
-    base:
-        image: wevquery/base
-        build: 
-            context: .
-            dockerfile: docker/base.dockerfile
-        container_name: wevquery-base
-
-    # mongo-express:
-    #     image: mongo-express:3.6
-    #     restart: always
-    #     ports:
-    #         - 8081:8081
-    #     environment:
-    #         ME_CONFIG_MONGODB_ADMINUSERNAME: root
-    #         ME_CONFIG_MONGODB_ADMINPASSWORD: example
             
